--- a/Student-management/Feature/AddStudent/AddStudentViewController.xib
+++ b/Student-management/Feature/AddStudent/AddStudentViewController.xib
@@ -9,6 +9,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddStudentViewController">
             <connections>
+                <outlet property="avatarImage" destination="Efl-zD-cxN" id="7oY-p7-kbl"/>
+                <outlet property="classTextField" destination="Duy-xG-zsN" id="2XS-gv-bv1"/>
+                <outlet property="dateOfBirthTextField" destination="jK6-7z-M8R" id="j0n-j9-Awp"/>
+                <outlet property="emailTextField" destination="k6E-P1-wJv" id="mJ9-gY-sOJ"/>
+                <outlet property="femaleButtonOutlet" destination="gmF-9Y-dzN" id="YCd-Ik-5HQ"/>
+                <outlet property="maleButtonOutlet" destination="3zW-us-4Ah" id="kyD-Vg-7tf"/>
+                <outlet property="nameTextField" destination="RpI-1a-rZp" id="6Jv-Bf-chU"/>
+                <outlet property="numberPhoneTextField" destination="OZ4-Hc-XoX" id="zd6-nX-HV3"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -18,10 +26,12 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="7WC-hE-bmS">
-                    <rect key="frame" x="20" y="74" width="374" height="412"/>
+                    <rect key="frame" x="20" y="74" width="374" height="422"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Efl-zD-cxN">
                             <rect key="frame" x="112" y="0.0" width="150" height="150"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <color key="tintColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="150" id="dlW-IE-6Ii"/>
                                 <constraint firstAttribute="width" constant="150" id="lr0-af-Vcs"/>
@@ -51,42 +61,50 @@
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
                         </textField>
-                        <stackView opaque="NO" contentMode="left" alignment="firstBaseline" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="bv8-Tq-uAt">
-                            <rect key="frame" x="120" y="303" width="134" height="15"/>
+                        <stackView opaque="NO" contentMode="left" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="bv8-Tq-uAt">
+                            <rect key="frame" x="87.5" y="303" width="199" height="25"/>
                             <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="clj-Jc-Vi8">
-                                    <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zW-us-4Ah">
+                                    <rect key="frame" x="0.0" y="2" width="25" height="21"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="15" id="VoQ-dZ-Nf0"/>
+                                        <constraint firstAttribute="width" constant="25" id="NSN-kN-iMe"/>
                                     </constraints>
-                                </view>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" backgroundImage="stop" catalog="system"/>
+                                    <connections>
+                                        <action selector="maleButtonTapped:" destination="-1" eventType="touchUpInside" id="EwN-6a-Z2h"/>
+                                    </connections>
+                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mnu-G0-U3o">
-                                    <rect key="frame" x="30" y="0.0" width="36" height="15"/>
+                                    <rect key="frame" x="55" y="0.0" width="36" height="25"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DxH-Fz-Mu3">
-                                    <rect key="frame" x="81" y="0.0" width="15" height="15"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmF-9Y-dzN">
+                                    <rect key="frame" x="121" y="2" width="25" height="21"/>
                                     <constraints>
-                                        <constraint firstAttribute="width" constant="15" id="0j4-dc-PWs"/>
+                                        <constraint firstAttribute="width" constant="25" id="SkP-bw-5Ms"/>
                                     </constraints>
-                                </view>
+                                    <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <state key="normal" backgroundImage="stop" catalog="system"/>
+                                    <connections>
+                                        <action selector="femaleButtonTapped:" destination="-1" eventType="touchUpInside" id="WlV-TR-vyK"/>
+                                    </connections>
+                                </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nữ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-p8-VwG">
-                                    <rect key="frame" x="111" y="0.0" width="23" height="15"/>
+                                    <rect key="frame" x="176" y="0.0" width="23" height="25"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="height" constant="15" id="NSx-Z6-ZRc"/>
+                                <constraint firstAttribute="height" constant="25" id="NSx-Z6-ZRc"/>
                             </constraints>
                         </stackView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Số điện thoại" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ4-Hc-XoX">
-                            <rect key="frame" x="0.0" y="330" width="374" height="35"/>
+                            <rect key="frame" x="0.0" y="340" width="374" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="uTV-YH-Yiq"/>
                             </constraints>
@@ -94,7 +112,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Lớp" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-xG-zsN">
-                            <rect key="frame" x="0.0" y="377" width="374" height="35"/>
+                            <rect key="frame" x="0.0" y="387" width="374" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="wUC-Gs-lbW"/>
                             </constraints>
@@ -111,26 +129,42 @@
                     </constraints>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZeQ-ag-BG3">
-                    <rect key="frame" x="40" y="516" width="334" height="42"/>
+                    <rect key="frame" x="40" y="526" width="334" height="42"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
                     <state key="normal" title="Lưu">
                         <color key="titleColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
+                    <connections>
+                        <action selector="submitTapped:" destination="-1" eventType="touchUpInside" id="BEm-o9-gZO"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOa-Ax-78b">
+                    <rect key="frame" x="132" y="74" width="150" height="150"/>
+                    <connections>
+                        <action selector="addAvatarTapped:" destination="-1" eventType="touchUpInside" id="Xbu-fL-DQK"/>
+                    </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
+                <constraint firstItem="sOa-Ax-78b" firstAttribute="centerX" secondItem="Efl-zD-cxN" secondAttribute="centerX" id="5mZ-Va-JK0"/>
                 <constraint firstItem="ZeQ-ag-BG3" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="40" id="6YP-Qe-O9s"/>
                 <constraint firstItem="ZeQ-ag-BG3" firstAttribute="top" secondItem="7WC-hE-bmS" secondAttribute="bottom" constant="30" id="73Y-6g-5uM"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="7WC-hE-bmS" secondAttribute="bottom" priority="250" constant="100" id="Ihu-Jj-NaI"/>
+                <constraint firstItem="sOa-Ax-78b" firstAttribute="centerY" secondItem="Efl-zD-cxN" secondAttribute="centerY" id="QVj-sg-qSB"/>
                 <constraint firstItem="7WC-hE-bmS" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="30" id="aq4-vs-eW9"/>
                 <constraint firstItem="7WC-hE-bmS" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="20" id="if1-MT-fhY"/>
                 <constraint firstItem="7WC-hE-bmS" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="pw0-h1-9Ba"/>
+                <constraint firstItem="sOa-Ax-78b" firstAttribute="height" secondItem="Efl-zD-cxN" secondAttribute="height" id="q8i-H7-h9m"/>
                 <constraint firstItem="ZeQ-ag-BG3" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="u9P-tN-UsU"/>
+                <constraint firstItem="sOa-Ax-78b" firstAttribute="width" secondItem="Efl-zD-cxN" secondAttribute="width" id="ye0-cK-Y9C"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="131.8840579710145" y="132.58928571428572"/>
         </view>
     </objects>
+    <resources>
+        <image name="stop" catalog="system" width="128" height="113"/>
+    </resources>
 </document>
