--- a/Student-management/Feature/AddClass/AddClassViewController.xib
+++ b/Student-management/Feature/AddClass/AddClassViewController.xib
@@ -9,6 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddClassViewController">
             <connections>
+                <outlet property="classTextField" destination="tWD-ZN-66B" id="8kC-kb-yBw"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -32,6 +33,9 @@
                             <state key="normal" title="Lưu">
                                 <color key="titleColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="submitButtonTapped:" destination="-1" eventType="touchUpInside" id="mAR-ji-uhU"/>
+                            </connections>
                         </button>
                     </subviews>
                 </stackView>
