--- a/Student-management/Feature/AddStudent/AddStudentViewController.xib
+++ b/Student-management/Feature/AddStudent/AddStudentViewController.xib
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AddStudentViewController">
             <connections>
-                <outlet property="avatarImage" destination="Efl-zD-cxN" id="7oY-p7-kbl"/>
+                <outlet property="avatarImageView" destination="Efl-zD-cxN" id="7oY-p7-kbl"/>
                 <outlet property="classTextField" destination="Duy-xG-zsN" id="2XS-gv-bv1"/>
                 <outlet property="dateOfBirthTextField" destination="jK6-7z-M8R" id="j0n-j9-Awp"/>
                 <outlet property="emailTextField" destination="k6E-P1-wJv" id="mJ9-gY-sOJ"/>
@@ -28,7 +29,7 @@
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="7WC-hE-bmS">
                     <rect key="frame" x="20" y="74" width="374" height="422"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Efl-zD-cxN">
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Efl-zD-cxN">
                             <rect key="frame" x="112" y="0.0" width="150" height="150"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <color key="tintColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -39,6 +40,7 @@
                         </imageView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Họ và tên sinh viên" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RpI-1a-rZp">
                             <rect key="frame" x="0.0" y="162" width="374" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="muO-Wx-27J"/>
                             </constraints>
@@ -47,6 +49,7 @@
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Email sinh viên" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k6E-P1-wJv">
                             <rect key="frame" x="0.0" y="209" width="374" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="Oxu-tp-h7g"/>
                             </constraints>
@@ -55,6 +58,7 @@
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Ngày tháng năm sinh" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jK6-7z-M8R">
                             <rect key="frame" x="0.0" y="256" width="374" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="tYn-Mk-Y9p"/>
                             </constraints>
@@ -62,7 +66,7 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <stackView opaque="NO" contentMode="left" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="bv8-Tq-uAt">
-                            <rect key="frame" x="87.5" y="303" width="199" height="25"/>
+                            <rect key="frame" x="88" y="303" width="198" height="25"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3zW-us-4Ah">
                                     <rect key="frame" x="0.0" y="2" width="25" height="21"/>
@@ -76,13 +80,13 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nam" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mnu-G0-U3o">
-                                    <rect key="frame" x="55" y="0.0" width="36" height="25"/>
+                                    <rect key="frame" x="55" y="0.0" width="35.5" height="25"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gmF-9Y-dzN">
-                                    <rect key="frame" x="121" y="2" width="25" height="21"/>
+                                    <rect key="frame" x="120.5" y="2" width="25" height="21"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="25" id="SkP-bw-5Ms"/>
                                     </constraints>
@@ -93,7 +97,7 @@
                                     </connections>
                                 </button>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nữ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zt0-p8-VwG">
-                                    <rect key="frame" x="176" y="0.0" width="23" height="25"/>
+                                    <rect key="frame" x="175.5" y="0.0" width="22.5" height="25"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
@@ -105,6 +109,7 @@
                         </stackView>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Số điện thoại" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OZ4-Hc-XoX">
                             <rect key="frame" x="0.0" y="340" width="374" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="uTV-YH-Yiq"/>
                             </constraints>
@@ -113,6 +118,7 @@
                         </textField>
                         <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="*Lớp" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Duy-xG-zsN">
                             <rect key="frame" x="0.0" y="387" width="374" height="35"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="wUC-Gs-lbW"/>
                             </constraints>
@@ -128,7 +134,7 @@
                         <constraint firstItem="RpI-1a-rZp" firstAttribute="leading" secondItem="7WC-hE-bmS" secondAttribute="leading" id="y1X-tD-QcD"/>
                     </constraints>
                 </stackView>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZeQ-ag-BG3">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZeQ-ag-BG3">
                     <rect key="frame" x="40" y="526" width="334" height="42"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -139,13 +145,14 @@
                         <action selector="submitTapped:" destination="-1" eventType="touchUpInside" id="BEm-o9-gZO"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOa-Ax-78b">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sOa-Ax-78b">
                     <rect key="frame" x="132" y="74" width="150" height="150"/>
                     <connections>
                         <action selector="addAvatarTapped:" destination="-1" eventType="touchUpInside" id="Xbu-fL-DQK"/>
                     </connections>
                 </button>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <color key="backgroundColor" red="0.067546926440000002" green="0.44095295670000001" blue="0.73271065950000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="sOa-Ax-78b" firstAttribute="centerX" secondItem="Efl-zD-cxN" secondAttribute="centerX" id="5mZ-Va-JK0"/>
@@ -160,7 +167,6 @@
                 <constraint firstItem="ZeQ-ag-BG3" firstAttribute="centerX" secondItem="Q5M-cg-NOt" secondAttribute="centerX" id="u9P-tN-UsU"/>
                 <constraint firstItem="sOa-Ax-78b" firstAttribute="width" secondItem="Efl-zD-cxN" secondAttribute="width" id="ye0-cK-Y9C"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="131.8840579710145" y="132.58928571428572"/>
         </view>
     </objects>
