--- a/Student-management/Feature/MainScreen/MainScreen.storyboard
+++ b/Student-management/Feature/MainScreen/MainScreen.storyboard
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="m5g-k3-q7k">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,15 +11,15 @@
             <objects>
                 <viewController storyboardIdentifier="MainScreenViewController" id="ZjG-0c-eYI" customClass="MainScreenViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FCa-cc-JDI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" text="" placeholder="Tìm kiếm" translatesAutoresizingMaskIntoConstraints="NO" id="2sZ-Z8-89X">
-                                <rect key="frame" x="0.0" y="88" width="414" height="56"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="UWI-6e-5ed">
-                                <rect key="frame" x="0.0" y="144" width="414" height="32"/>
+                                <rect key="frame" x="0.0" y="100" width="600" height="32"/>
                                 <segments>
                                     <segment title="DS Sinh Viên"/>
                                     <segment title="DS Lớp"/>
@@ -30,7 +29,7 @@
                                 </connections>
                             </segmentedControl>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WZ8-IG-raj">
-                                <rect key="frame" x="0.0" y="175" width="414" height="687"/>
+                                <rect key="frame" x="0.0" y="131" width="600" height="469"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
@@ -57,11 +56,12 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="plus" catalog="system" id="dJF-hD-L98">
                             <connections>
-                                <action selector="addStudentTapped:" destination="ZjG-0c-eYI" id="Yv3-pL-d9I"/>
+                                <action selector="addButtonTapped:" destination="ZjG-0c-eYI" id="Yv3-pL-d9I"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="2sZ-Z8-89X" id="GRx-IS-EMv"/>
                         <outlet property="segmentOutlet" destination="UWI-6e-5ed" id="stp-de-2TQ"/>
                         <outlet property="tableView" destination="WZ8-IG-raj" id="m90-FR-7GJ"/>
                     </connections>
